# csc299-project

./: README.md  SUMMARY.md  run-final-project.ps1  run-final-project.sh  tasks2  tasks2.py  video.txt
final_project/: README.md  requirements.txt
final_project/data/: notes.json  notes.json.bak  tasks.json  tasks.json.bak
final_project/tests/: test_notes.py  test_storage.py  test_tasks.py
src/final_project/: __init__.py  __main__.py  chat.py  cli.py  notes.py  storage.py  tasks.py  utils.py
tasks1/: cli.py  models.py  storage.py  utils.py
tasks2/: README.md  tasks2.py
tasks3/: pyproject.toml  tasks.json
tasks3/src/tasks3/: __init__.py  core.py
tasks3/tests/: test_tasks_basic.py
tasks4/: pyproject.toml
tasks4/src/tasks4/: __init__.py
tasks5/: README.md  cli.py  storage.py  tasks.py
tasks5/.github/: speckit.constitution.md  speckit.specify.md
tasks5/tasks5/: __init__.py  cli.py  storage.py  tasks.py
tasks5/tests/: test_tasks.py
